# korius

./: .gitignore  Makefile  PARSER_README.md  README.md
backend/: .env.example  __init__.py  example_order_workflow.py  pyproject.toml  test_order_parser.py  test_parser.py
backend/api/: __init__.py  main.py
backend/controllers/: agent_controller.py  parser_controller.py  product_controller.py  root_controller.py  supplier_controller.py  update_agent.py
backend/services/: conversation_manager.py  data_loader.py  elevenlabs_agent_service.py  models.py  order_delivery_parser_service.py  parsed_to_csv_service.py  product_discovery_service.py  script.py  supplier_analysis_service.py  transcript_parser_service.py
backend/tests/: test_parsed_to_csv_service.py  test_parser_pipeline.py
data/: available_product.csv  fournisseur.csv  generate_fake_data.py  in_store_product.csv  orders.csv
data/transcripts/: 20251115_203105.json  20251115_211355.json  20251115_211539.json  20251115_211628.json  20251116_103230.json  conv_2501ka46zqvae46rw79r18zv785g.json  conv_5601ka48ejk2eysrzbj7rzjjgk63.json
elevenlabsdemo/: create_agent.py  elevenlabsagent.py  requirements.txt  systprompt.py  transcript.json  transcripts.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend-rayan/: README.md  index.html
frontend-rayan/src/components/: AISuggestions.tsx
frontend-rayan/src/pages/: Index.tsx
frontend/src/: App.css  App.jsx  index.css
transcripts/: 20251115_191645.json  20251115_191858.json  conv_2901ka4bkcqyfxk82pcah39dhrb8.json
(+14 files in other folders)
