[project]
name = "hackathon-iterate-backend"
version = "0.1.0"
description = "Backend for hackathon-iterate with agents and data analysis"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["backend/**/*"]

