[project]
name = "hackathon-iterate-backend"
version = "0.1.0"
description = "Backend for hackathon-iterate with agents and data analysis"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pydantic>=2.12.4",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pytest>=9.0.1",
    "anthropic>=0.39.0",
    "python-dotenv>=1.0.0",
    "dotenv>=0.9.9",
    "elevenlabs>=2.23.0",
    "pyaudio>=0.2.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["backend/**/*"]

